# portfolio_overview

./: .gitignore  CHANGELOG_REWRITE.md  PROJECT_STRUCTURE.md  Privat formue - Samlet.csv  README.md  app.py  clean_artifacts.py  example_chart.py  nav_data.json  portfolio_data.xlsx  pyproject.toml  test_sector_inference.py
.github/prompts/: copilot_instructions.prompt.md
src/components/: charts.py  kpi_cards.py  metrics.py  nav.py  tables.py
src/config/: constants.py  theme.py
src/data/: loader.py  processor.py
src/utils/: filters.py  formatting.py
tests/: test_data_loader.py  test_nav.py
