[project]
name = "portfolio-overview"
version = "0.1.0"
description = "Portfolio overview and performance analysis dashboard"
authors = [
    {name = "Marc"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.55.0",
    "pandas>=2.1.0",
    "plotly>=5.17.0",
    "altair>=5.1.0",
    "numpy>=1.24.0",
    "openpyxl (>=3.1.5,<4.0.0)",
    "yfinance (>=1.2.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
clean-artifacts = "clean_artifacts:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
